src/yini_test/cases/golden/lenient/valid/comments/shebang-as-comment.yini
@yini
#!/usr/bin/env yini

^ Application
name = "lenient-shebang-as-comment"
enabled = true
