src/yini_test/cases/golden/lenient/invalid/comments/comment-splits-token.yini
@yini

^ Application
na#me = "lenient-comment-splits-token"
